--- a/website/app/globals.css
+++ b/website/app/globals.css
@@ -1,26 +1,52 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Caudex:ital,wght@0,400;0,700&family=Libre+Bodoni:wght@400;600;700&display=swap');
+
+
+html {
+  min-width: 100vw;
+  max-width: 100vw;
+  width: 100vw;
 }
 
-@theme inline {
+body {
+  max-width: 100vw;
+  min-width: 100vw;
+  width: 100vw;
+  overflow-x: hidden;
+}
+
+
+
+/* :root {
+  --background: #ffffff;
+  --foreground: #171717;
+} */
+
+/* @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
-}
+} */
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
-    --foreground: #ededed;
+    --color-text-primary: #000;
   }
-}
+} */
+
+/* *, *::before, *:after {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+} */
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  /* background: var(--background);
+  color: var(--color-text-primary);
+  font-family: Arial, Helvetica, sans-serif; */
+  /* max-width: 100vw;
+  width: 100vw; */
 }
