--- a/website/app/globals.css
+++ b/website/app/globals.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Caudex:ital,wght@0,400;0,700&family=Libre+Bodoni:wght@400;600;700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Caudex:ital,wght@0,400;0,700&family=Libre+Bodoni:wght@400;600;700&display=swap'); */
 
 
 html {
@@ -14,14 +14,16 @@ body {
   min-width: 100vw;
   width: 100vw;
   overflow-x: hidden;
+  color: white;
 }
 
 
 
-/* :root {
-  --background: #ffffff;
-  --foreground: #171717;
-} */
+:root {
+/* Colors */
+  --color-primary: #1986C9;
+  --color-secondary: #86672B;
+}
 
 /* @theme inline {
   --color-background: var(--background);
@@ -43,10 +45,10 @@ body {
   margin: 0;
 } */
 
-body {
+
   /* background: var(--background);
   color: var(--color-text-primary);
   font-family: Arial, Helvetica, sans-serif; */
   /* max-width: 100vw;
   width: 100vw; */
-}
+
