--- a/website/app/globals.css
+++ b/website/app/globals.css
@@ -1,7 +1,7 @@
-@import "tailwindcss";
-
-/* @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Caudex:ital,wght@0,400;0,700&family=Libre+Bodoni:wght@400;600;700&display=swap'); */
-
+/* @import "tailwindcss"; */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 html {
   min-width: 100vw;
@@ -17,38 +17,11 @@ body {
   color: white;
 }
 
-
-
 :root {
 /* Colors */
-  --color-primary: #1986C9;
-  --color-secondary: #86672B;
+  --color-primary: #1475b1;
+  --color-secondary: #86672B; 
 }
 
-/* @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-} */
 
-/* @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --color-text-primary: #000;
-  }
-} */
-
-/* *, *::before, *:after {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-} */
-
-
-  /* background: var(--background);
-  color: var(--color-text-primary);
-  font-family: Arial, Helvetica, sans-serif; */
-  /* max-width: 100vw;
-  width: 100vw; */
 
