--- a/website/app/globals.css
+++ b/website/app/globals.css
@@ -40,5 +40,14 @@ section {
   padding-bottom: 18rem;
 }
 
+label {
+    font-size: 2.4rem;
+}
+
+input {
+  font-size: 2.4rem;
+  font-family: var(--font-caudex);;
+}
+
 
 
