--- a/website/app/globals.css
+++ b/website/app/globals.css
@@ -40,12 +40,12 @@ section {
   padding-bottom: 18rem;
 }
 
-label {
-    font-size: 2.4rem;
-}
+/* label {
+    font-size: 1.4rem;
+} */
 
 input {
-  font-size: 2.4rem;
+  font-size: 1.4rem;
   font-family: var(--font-caudex);;
 }
 
